unpackaged/main/default/objects/n2de__Distribution_engine_details__c/n2de__Distribution_engine_details__c.object-meta.xml
<CustomObject>
    <label>Distribution Engine details</label>
    <nameField>
        <displayFormat>DE-{0}</displayFormat>
        <label>DE Detail</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distribution Engine details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>