unpackaged/main/default/objects/n2de__Distribution_engine_details__c/fields/n2de__Auto_conversion_datetime__c.field-meta.xml
<CustomField>
    <fullName>n2de__Auto_conversion_datetime__c</fullName>
    <description>Auto-conversion datetime</description>
    <label>Auto conversion datetime</label>
    <type>DateTime</type>
</CustomField>