unpackaged/main/default/objects/n2de__Distribution_engine_details__c/fields/n2de__Auto_conversion_rule__c.field-meta.xml
<CustomField>
    <fullName>n2de__Auto_conversion_rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The auto-conversion rule that matched during classification</description>
    <label>Auto-conversion rule</label>
    <referenceTo>n2de__cls_Auto_conversion_rule__c</referenceTo>
    <relationshipLabel>Auto conversion rule</relationshipLabel>
    <relationshipName>Auto_conversion_rule</relationshipName>
    <type>Lookup</type>
</CustomField>