unpackaged/main/default/objects/n2de__Distribution_engine_details__c/fields/n2de__De_duplication_datetime__c.field-meta.xml
<CustomField>
    <fullName>n2de__De_duplication_datetime__c</fullName>
    <description>De-duplication datetime</description>
    <label>De-duplication datetime</label>
    <type>DateTime</type>
</CustomField>