unpackaged/main/default/objects/n2de__Distribution_engine_details__c/fields/n2de__Domain__c.field-meta.xml
<CustomField>
    <fullName>n2de__Domain__c</fullName>
    <description>The domain extracted from either the email address, or if that doesn&#39;t exist, the website</description>
    <label>Email or Website Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>