unpackaged/main/default/objects/n2de__Distribution_engine_details__c/fields/n2de__Is_de_duplicated__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_de_duplicated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the record been de-duplicated?</description>
    <label>Is de-duplicated</label>
    <type>Checkbox</type>
</CustomField>