unpackaged/main/default/objects/n2de__Distribution_engine_details__c/fields/n2de__Is_personal_email__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_personal_email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not the email address is a personal email address</description>
    <label>Is Personal Email</label>
    <type>Checkbox</type>
</CustomField>