unpackaged/main/default/objects/n2de__Distribution_engine_details__c/fields/n2de__Matched_account__c.field-meta.xml
<CustomField>
    <fullName>n2de__Matched_account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account that was matched</description>
    <label>Matched Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DE Matched Account</relationshipLabel>
    <relationshipName>DE_Matched_account</relationshipName>
    <type>Lookup</type>
</CustomField>