unpackaged/main/default/objects/n2de__Distribution_engine_details__c/fields/n2de__Matched_contact__c.field-meta.xml
<CustomField>
    <fullName>n2de__Matched_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact that was matched</description>
    <label>Matched Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>DE Matched Contact</relationshipLabel>
    <relationshipName>DE_Matched_contact</relationshipName>
    <type>Lookup</type>
</CustomField>