unpackaged/main/default/objects/n2de__Distribution_engine_details__c/fields/n2de__Matched_lead__c.field-meta.xml
<CustomField>
    <fullName>n2de__Matched_lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lead that was matched</description>
    <label>Matched Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>DE Matched lead</relationshipLabel>
    <relationshipName>DE_Matched_lead</relationshipName>
    <type>Lookup</type>
</CustomField>