unpackaged/main/default/objects/n2de__Distribution_engine_details__c/fields/n2de__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>n2de__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity created during auto-conversion</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Distribution Engine details</relationshipLabel>
    <relationshipName>Distribution_Engine_details</relationshipName>
    <type>Lookup</type>
</CustomField>