unpackaged/main/default/objects/n2de__Distribution_engine_details__c/fields/n2de__Record_id_index__c.field-meta.xml
<CustomField>
    <fullName>n2de__Record_id_index__c</fullName>
    <externalId>true</externalId>
    <label>Record id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>