unpackaged/main/default/objects/n2de__Distribution_engine_details__c/fields/n2de__Territory__c.field-meta.xml
<CustomField>
    <fullName>n2de__Territory__c</fullName>
    <description>Name of the territory DE has matched for this lead, format - MapName.TerritoryName</description>
    <label>Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>